restdb/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restdb-1.0
  labels:
    app: restdb
    version: 1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restdb
      version: 1.0
  template:
    metadata:
      labels:
        app: restdb
        version: 1.0
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: restdb-1.0
          image: image-registry.openshift-image-registry.svc:5000/demo/restdb:1.0
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
