restdb/DeploymentConfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: restdb-v10
  labels:
    app: restdb
    version: v10
spec:
  replicas: 1
  selector:
    app: restdb
    version: v10
  template:
    metadata:
      labels:
        app: restdb
        version: v10
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: restdb-v10
          image: image-registry.openshift-image-registry.svc:5000/demo/restdb:1.0
          ports:
            - containerPort: 8080
          imagePullPolicy: Always

  triggers:
    - type: "ImageChange"
      imageChangeParams:
        automatic: true
        from:
          kind: "ImageStreamTag"
          name: "restdb:1.0"
        containerNames:
          - "restdb-v10"
