restdb/Service.yml
kind: Service
apiVersion: v1
metadata:
  name: restdb
  labels:
    app: restdb
    service: restdb
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: restdb
  type: ClusterIP
  sessionAffinity: None
