restdb/DestinationRule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: restdb
spec:
  host: restdb
  subsets:
  - name: v1
    labels:
      version: 1.0
