restdb/VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: restdb
spec:
  hosts:
  - restdb
  http:
  - route:
    - destination:
        host: restdb
        subset: v10
